--- a/info/TODO.org
+++ b/info/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2021-09-19>
+#+DATE: Time-stamp: <2021-10-02>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -12,13 +12,19 @@
 #+HTML_MATHJAX:
 #+INFOJS_OPT:
 #+LATEX_HEADER:
-#+STARTUP: showall
+#+STARTUP: showallnnnn
 
 # title problematic for Info
 # #+title: The TODO file of APDL-Mode
 
-* TODO Version 20.6.0
-  Release with Emacs 28.1
+* TODO V 20.7.0
+** Bugs
+   - C-c C-b isn't working!
+** Misc
+  - Linux: C-c C-o -> *APDL Classics* Buffer when process running
+* Version 20.6.0
+  - Branch 20.6.0 [2021-10-01 Fr]
+  - Feature freeze: Only bugs or template changes
 ** Todos, bugs
    - APDL reference is incomplete
    - Tutorial pictures are often outdated (ansys -> apdl)
