--- a/info/NEWS.org
+++ b/info/NEWS.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2021-10-16>
+#+DATE: Time-stamp: <2021-10-23>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -19,8 +19,10 @@
 Copyright (C) 2006 - 2021  H. Dieter Wilhelm, GPL V3
 
 * Version 20.7.0
-  - new APDL menu entry: Browse the Customer Portal of Ansys
-
+  - Rework of the APDL menu and new entry: Browse the Customer Portal
+    of Ansys
+  - Added ".inp" as autoloaded file suffix for apdl-mode (together
+    with ".mac", ".dat" and ".ans").
 * Version 20.6.0, 15 years of APDL-Mode!
   Improvements, extensions and bug fixes, 2021-09-26 rc1
   - Implemented batch runs with the current script (now C-c C-y) and
