--- a/info/bugs.org
+++ b/info/bugs.org
@@ -1,6 +1,6 @@
-APDL-Mode was tested using Ansys v201 and v211 under Windows 10 with
-Emacs-27.1.  Under GNU-Linux the mode was developed and checked under
-both Emacs-24.3 and Emacs-28.0.50.
+APDL-Mode was tested using Ansys v201 and v211 under Windows 10 and 11
+with Emacs-29.1.  Under GNU-Linux the mode was developed and checked
+under both Emacs-24.3 and Emacs-29.1
 
 Feedback is always welcome.  If you have issues while installing and
 running this mode or want to suggest improvements you have the
